Update bower.json, add LICENSE and README.md

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "iconicfuture-angular-example",
+  "name": "mlatzko-angular-example",
   "description": "An AngularJS and Twitter Bootstrap based example.",
   "version": "1.0.0",
   "private": true,
